Salvar alterações: restaurar frontend e salvar mudanças locais (commit automático)

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -2,15 +2,13 @@
 DATABASE_URL="postgresql://postgres:postgres@db:5432/appdb"
 
 # ===== AUTH =====
-APP_PORT=3000
-JWT_SECRET=supersecretjwt
-JWT_EXPIRES_IN=1h
+JWT_SECRET="supersecretjwt"
+JWT_EXPIRES_IN="1h"
 
 # ===== SERVER =====
-NODE_ENV=development
-LOG_LEVEL=info
-FRONTEND_URL=http://localhost:3001
-BACKEND_URL=http://localhost:3000
+APP_PORT=3000
+NODE_ENV="development"
+LOG_LEVEL="info"
 
 # ===== POSTGRES (Docker Compose) =====
 POSTGRES_HOST=db
